# archilles

./: .gitattributes  .gitignore  AGENTS.md  ANNOTATION_IMPORT_SPEC.md  ARCHILLES_SKILL.md  ARCHILLES_USER.md  ASTERISK_INVESTIGATION.md  CALIBRE_ID_TESTING.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DUPLICATES_DETECTION.md  FIXES_APPLIED.md  HANDOVER.md  IMPLEMENTATION_STATUS.md  ITERATIVE_SEARCH_GUIDE.md  LICENSE  README.md  SESSION_HANDSHAKE.md  SETUP_GUIDE_FOR_WINDOWS.md  SPEC.md  analyze_page_329.py  annotation_hash_fix.py  calibre_analyzer.py  check_metadata_update.py  check_source.py  check_toc.py  debug_asterisk.py  debug_collection.py  debug_epub_identifiers.py  debug_metadata.py  debug_search.py  example_usage.py  extract_printed_pages.py  extract_toc_source.py  find_page_numbers.py  inspect_calibre_db.py  mcp_server.py  pyproject.toml  (+19 more)
.streamlit/: config.toml
docs/: ARCHITECTURE.md  DECISIONS.md  EDITIONS.md  EXTRACTION_GUIDE.md  FAQ.md  FEATURES.md  HANDOVER_2026-01-11.md  HANDOVER_2026-02-06.md  INSTALLATION.md  MCP_GUIDE.md  POSITIONING_STATEMENT.md  ROADMAP.md  SEARCH_WORKFLOWS.md  TROUBLESHOOTING.md  USAGE.md  USER_GUIDE.md  WATCHDOG_AND_WIKI.md  WHY.md  annotation_matching_strategy.md  research_interests.json.example
scripts/: analyze_chunks.py  backfill_metadata_hash.py  batch_index.py  check_highlight_text.py  check_rag_index.py  check_tags.py  chunk_inspector.py  cleanup_by_tag.py  colab_embedding.ipynb  debug_annotation_hashes.py  delete_tag_books.py  demo_extraction.py  diagnose_annotation_sources.py  diagnose_annotations.py  embedding_server.py  example_xml_prompts.py  explore_chromadb_schema.py  extract_page_numbers.py  find_books_missing_labels.py  find_duplicate_chunks.py  (+42 more)
(+185 files in other folders)
